--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,7 +21,7 @@
                 android:layout_height="64dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="48dp"
-                android:tint="@color/colorPrimary"
+                android:tint="@color/textColorPrimary"
                 android:layout_marginBottom="16dp"
                 app:srcCompat="@drawable/shr_logo"/>
 
