--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -21,7 +21,7 @@
                 android:layout_height="64dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="48dp"
-                android:tint="@color/textColorPrimary"
+                android:tint="?android:attr/textColorPrimary"
                 android:layout_marginBottom="16dp"
                 app:srcCompat="@drawable/shr_logo"/>
 
@@ -69,17 +69,18 @@
                     android:id="@+id/next_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    style="@style/Widget.Shrine.Button"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:text="@string/shr_button_next"/>
 
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/cancel_button"
-                    style="@style/Widget.MaterialComponents.Button.TextButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="12dp"
                     android:layout_marginRight="12dp"
+                    style="@style/Widget.Shrine.Button.TextButton"
                     android:layout_toStartOf="@id/next_button"
                     android:layout_toLeftOf="@id/next_button"
                     android:text="@string/shr_button_cancel"/>
