--- a/app/src/main/res/layout/fragment_product_grid.xml
+++ b/app/src/main/res/layout/fragment_product_grid.xml
@@ -7,6 +7,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
+            app:elevation="0dp"
             android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.Toolbar
@@ -24,6 +25,7 @@
             android:layout_marginTop="56dp"
             android:background="@color/productGridBackgroundColor"
             android:paddingStart="@dimen/shr_product_grid_spacing"
+            android:elevation="8dp"
             android:paddingEnd="@dimen/shr_product_grid_spacing"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
