--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!--<color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-    <color name="loginPageBackgroundColor">#FFFFFF</color>
-    <color name="productGridBackgroundColor">#FFFFFF</color>-->
 
-    <color name="colorPrimary">#E0E0E0</color>
+    // Theme Colors
+    <color name="colorPrimary">#FEDBD0</color>
     <color name="colorPrimaryDark">#FBB8AC</color>
-    <color name="colorAccent">#FEDBD0</color>
+    <color name="colorAccent">#E0E0E0</color>
     <color name="loginPageBackgroundColor">#FFFFFF</color>
     <color name="productGridBackgroundColor">#FFFFFF</color>
     <color name="textColorPrimary">#442C2E</color>
     <color name="colorControlActivated">#FBB8AC</color>
     <color name="toolbarIconColor">@color/textColorPrimary</color>
 
+    <color name="colorSecondary">#FFCF44</color>
+    <color name="colorSecondaryLight">#ffff77</color>
+    <color name="colorSecondaryDark">#c89e00</color>
+    <color name="colorOnSecondary">#000000</color>
+    <color name="colorError">#C51162</color>
+
+    // Dark Theme Colors Variations
+    <!--<color name="colorPrimary">#E0E0E0</color>
+    <color name="colorPrimaryDark">#27272F</color>
+    <color name="colorAccent">#33333D</color>
+    <color name="loginPageBackgroundColor">#414149</color>
+    <color name="productGridBackgroundColor">#414149</color>
+    <color name="textColorPrimary">#FFFFFF</color>
+    <color name="colorControlActivated">#FFCF44</color>
+    <color name="toolbarIconColor">#FFCF44</color>-->
+
+    // Other Colors
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 
 </resources>
