--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -56,6 +56,7 @@
             <com.google.android.material.textfield.TextInputEditText
                     android:inputType="textPassword"
                     android:id="@+id/password_edit_text"
+                    tools:hint="Password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
         </com.google.android.material.textfield.TextInputLayout>
