--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -66,4 +66,25 @@
         <item name="android:textColor">?android:attr/textColorPrimary</item>
     </style>
 
+    <style name="Widget.Button.Cut" parent="Widget.MaterialComponents.Button">
+        <item name="shapeAppearance">@style/MyShapeAppearance</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="Widget.TextButton.Cut" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="shapeAppearance">@style/MyShapeAppearance</item>
+        <item name="backgroundTint">@color/colorPrimary</item>
+    </style>
+
+    <style name="MyShapeAppearance">
+        <item name="cornerFamilyTopLeft">cut</item>
+        <item name="cornerFamilyBottomLeft">rounded</item>
+        <item name="cornerFamilyTopRight">rounded</item>
+        <item name="cornerFamilyBottomRight">rounded</item>
+        <item name="cornerSizeTopLeft">20dp</item>
+        <item name="cornerSizeBottomLeft">0dp</item>
+        <item name="cornerSizeBottomRight">0dp</item>
+        <item name="cornerSizeTopRight">0dp</item>
+    </style>
+
 </resources>
